<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="900dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="450dp">

        <TextView
            android:id="@+id/password_greeting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="91dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@string/police_agree"
            android:textSize="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_intro_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/password_set"
            android:textSize="19dp"
            app:layout_constraintStart_toStartOf="@+id/password_greeting_tv"
            app:layout_constraintTop_toBottomOf="@+id/password_greeting_tv" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_get_cl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/edit_text"
            app:layout_constraintDimensionRatio="343:50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_intro_tv">


            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:background="@color/transparent"
                android:fontFamily="@font/pretendard_semi_bold"
                android:hint="@string/password_input"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/password_get_cl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:id="@+id/password_sub_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:columnCount="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/password_greeting_tv"
            app:layout_constraintTop_toBottomOf="@id/password_get_cl">

            <ImageView
                android:id="@+id/condition1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/error_img" />

            <TextView
                android:id="@+id/password_sub1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/password_sub1"
                android:textAlignment="gravity"
                android:textColor="@color/light_gray"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/condition2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/error_img" />

            <TextView
                android:id="@+id/password_sub2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/password_sub2"
                android:textAlignment="gravity"
                android:textColor="@color/light_gray"
                android:textSize="12dp" />

        </GridLayout>

        <Button
            android:id="@+id/password_end_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/button_green"
            android:enabled="false"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="완료"
            android:textColor="@color/button_green"
            android:textSize="15dp"
            app:layout_constraintDimensionRatio="343:50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_sub_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>