<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="900dp"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="450dp">

        <TextView
            android:id="@+id/introduction_greeting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="91dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@string/police_agree"
            android:textSize="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/introduction_intro_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/introduction_set1"
            android:textSize="19dp"
            app:layout_constraintStart_toStartOf="@+id/introduction_greeting_tv"
            app:layout_constraintTop_toBottomOf="@+id/introduction_greeting_tv" />

        <TextView
            android:id="@+id/introduction_intro_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/introduction_set2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/introduction_greeting_tv"
            app:layout_constraintTop_toBottomOf="@+id/introduction_intro_tv" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="79dp"
            android:layout_height="81dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/baseline_add_a_photo_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introduction_intro_tv2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/introduction_get_cl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">


            <EditText
                android:id="@+id/introduction_et"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:background="@color/transparent"
                android:cursorVisible="true"
                android:fontFamily="@font/pretendard_semi_bold"
                android:hint="@string/introduction_input"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLength="501"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/introduction_get_cl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/introduction_end_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/button_green"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="회원가입하기"
            android:textColor="@color/button_green"
            android:textSize="15dp"
            app:layout_constraintDimensionRatio="343:50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introduction_get_cl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>